Fix dropdown z-index layering and background colors for mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -832,28 +832,22 @@ img {
     }
 }
 
-.south-search-area {
-    #cities + .nice-select,
-    #catagories + .nice-select,
-    #offers + .nice-select,
-    #listings + .nice-select {
-        background-color: #fff !important;
-        &:hover,
-        &:focus {
-            background-color: #fff !important;
-        }
-    }
-}
-
 .nice-select {
     line-height: 34px;
     position: relative;
-    z-index: 1001;
+    z-index: 1;
+    &.form-control {
+        background-color: #fff !important;
+        background: #fff !important;
+    }
+    &.open {
+        z-index: 10001 !important;
+    }
     .list {
         left: 0 !important;
         right: 0 !important;
         border-radius: 0;
-        z-index: 10000 !important;
+        z-index: 10002 !important;
         position: absolute !important;
     }
     .option {
@@ -910,6 +904,45 @@ img {
         box-shadow: 0 5px 30px rgba(0, 0, 0, 0.15);
         @media #{$breakpoint-xs} {
             padding: 30px 20px;
+        }
+        #cities + .nice-select,
+        #catagories + .nice-select,
+        #offers + .nice-select,
+        #listings + .nice-select {
+            background-color: #fff !important;
+            background: #fff !important;
+            &:hover,
+            &:focus,
+            &:active,
+            &.open {
+                background-color: #fff !important;
+                background: #fff !important;
+            }
+            @media #{$breakpoint-xs} {
+                background-color: #fff !important;
+                background: #fff !important;
+            }
+            @media #{$breakpoint-md} {
+                background-color: #fff !important;
+                background: #fff !important;
+            }
+        }
+        .form-group {
+            #cities + .nice-select,
+            #catagories + .nice-select,
+            #offers + .nice-select,
+            #listings + .nice-select {
+                background-color: #fff !important;
+                background: #fff !important;
+            }
+        }
+        // Target form-groups containing the specific dropdowns
+        .form-group:has(#cities) .nice-select,
+        .form-group:has(#catagories) .nice-select,
+        .form-group:has(#offers) .nice-select,
+        .form-group:has(#listings) .nice-select {
+            background-color: #fff !important;
+            background: #fff !important;
         }
         .search-title {
             position: absolute;
@@ -2247,6 +2280,48 @@ img {
 }
 
 /* Cool Facts CSS */
+
+/* Fix dropdown backgrounds for cities, categories, offers, listings */
+.south-search-area .advanced-search-form #cities + .nice-select,
+.south-search-area .advanced-search-form #catagories + .nice-select,
+.south-search-area .advanced-search-form #offers + .nice-select,
+.south-search-area .advanced-search-form #listings + .nice-select {
+    background-color: #fff !important;
+    background: #fff !important;
+    background-image: none !important;
+}
+
+.south-search-area .advanced-search-form #cities + .nice-select:hover,
+.south-search-area .advanced-search-form #cities + .nice-select:focus,
+.south-search-area .advanced-search-form #cities + .nice-select:active,
+.south-search-area .advanced-search-form #cities + .nice-select.open,
+.south-search-area .advanced-search-form #catagories + .nice-select:hover,
+.south-search-area .advanced-search-form #catagories + .nice-select:focus,
+.south-search-area .advanced-search-form #catagories + .nice-select:active,
+.south-search-area .advanced-search-form #catagories + .nice-select.open,
+.south-search-area .advanced-search-form #offers + .nice-select:hover,
+.south-search-area .advanced-search-form #offers + .nice-select:focus,
+.south-search-area .advanced-search-form #offers + .nice-select:active,
+.south-search-area .advanced-search-form #offers + .nice-select.open,
+.south-search-area .advanced-search-form #listings + .nice-select:hover,
+.south-search-area .advanced-search-form #listings + .nice-select:focus,
+.south-search-area .advanced-search-form #listings + .nice-select:active,
+.south-search-area .advanced-search-form #listings + .nice-select.open {
+    background-color: #fff !important;
+    background: #fff !important;
+    background-image: none !important;
+}
+
+@media only screen and (max-width: 991px) {
+    .south-search-area .advanced-search-form #cities + .nice-select,
+    .south-search-area .advanced-search-form #catagories + .nice-select,
+    .south-search-area .advanced-search-form #offers + .nice-select,
+    .south-search-area .advanced-search-form #listings + .nice-select {
+        background-color: #fff !important;
+        background: #fff !important;
+        background-image: none !important;
+    }
+}
 
 .single-cool-fact-area {
     h2 {
